apps/n8n/n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.orriborri.com
spec:
  type: LoadBalancer
  selector:
    app: n8n
  ports:
    - name: n8n
      protocol: TCP
      port: 80
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: postgres:16@sha256:e2135391c55eb2ecabaaaeef4a9538bb8915c1980953fb6ce41a2d6d3e4b5695
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5678
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: n8n-data
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
      
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
