apps/n8n/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.orriborri.com
spec:
  type: LoadBalancer
  selector:
    app: n8n
  ports:
    - name: n8n
      protocol: TCP
      port: 80
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: default
spec:
  ingressClassName: private
  rules:
    - host: n8n.orriborri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
  tls:
    - hosts:
        - n8n.orriborri.com
      secretName: orriborri-org-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:2.43.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5678
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
